--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -206,10 +206,45 @@
                   <property name="rightMargin">
                    <number>5</number>
                   </property>
-                  <item alignment="Qt::AlignTop">
-                   <widget class="QComboBox" name="samp_combo"/>
+                  <property name="bottomMargin">
+                   <number>5</number>
+                  </property>
+                  <item>
+                   <layout class="QHBoxLayout" name="sampler_combo_sublayout" stretch="4,1">
+                    <property name="leftMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>5</number>
+                    </property>
+                    <item>
+                     <widget class="QComboBox" name="samp_combo"/>
+                    </item>
+                    <item>
+                     <widget class="QComboBox" name="samp_model_combo"/>
+                    </item>
+                   </layout>
                   </item>
                  </layout>
+                </item>
+                <item>
+                 <spacer name="verticalSpacer_4">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
                 </item>
                </layout>
               </widget>
@@ -337,8 +372,27 @@
                   <property name="bottomMargin">
                    <number>5</number>
                   </property>
-                  <item alignment="Qt::AlignTop">
-                   <widget class="QComboBox" name="mtn_combo"/>
+                  <item>
+                   <layout class="QHBoxLayout" name="mtn_ctrl_combo_sublayout" stretch="4,1">
+                    <property name="leftMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>5</number>
+                    </property>
+                    <item>
+                     <widget class="QComboBox" name="mtn_combo"/>
+                    </item>
+                    <item>
+                     <widget class="QComboBox" name="mtn_model_combo"/>
+                    </item>
+                   </layout>
                   </item>
                  </layout>
                 </item>
