Added multi-sampler support to scans. Currently only plots data from the 0-index sampler. Also added name-getters for devices.

--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -59,7 +59,7 @@
            </font>
           </property>
           <property name="title">
-           <string>Main Drive - [PORT] ([MODEL])</string>
+           <string>Main Drive</string>
           </property>
           <property name="flat">
            <bool>true</bool>
@@ -538,8 +538,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>455</width>
-                   <height>108</height>
+                   <width>472</width>
+                   <height>118</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_9">
