--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -49,7 +49,7 @@
         <number>5</number>
        </property>
        <item>
-        <widget class="QLabel" name="explanation_label">
+        <widget class="QLabel" name="dmw_explanation_ql">
          <property name="font">
           <font>
            <family>Segoe UI</family>
