--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1557</width>
-    <height>974</height>
+    <width>1196</width>
+    <height>858</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -51,6 +51,12 @@
         </property>
         <item>
          <widget class="QScrollArea" name="scrollArea_2">
+          <property name="minimumSize">
+           <size>
+            <width>452</width>
+            <height>553</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
             <width>700</width>
@@ -64,9 +70,9 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>-139</y>
-             <width>685</width>
-             <height>705</height>
+             <y>0</y>
+             <width>556</width>
+             <height>875</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -655,7 +661,7 @@
                       <rect>
                        <x>0</x>
                        <y>0</y>
-                       <width>579</width>
+                       <width>496</width>
                        <height>148</height>
                       </rect>
                      </property>
@@ -1606,8 +1612,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1557</width>
-     <height>18</height>
+     <width>1196</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
